--- a/app/src/components/nav.css
+++ b/app/src/components/nav.css
@@ -4,13 +4,14 @@ nav{
     border: 1px solid black;
     display: flex;
     justify-content: space-between;
-
+background-color: burlywood;
+color: white;
 
 }
 .logo{
     width: 200px;
     height: 100%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     font-size: 30px;
     font-weight: 600;
     display: flex;
@@ -20,7 +21,7 @@ nav{
 .manu{
     width: 600px;
     height: 100%;
-    border: 1px solid rgb(21, 2, 2);
+    /* border: 1px solid rgb(21, 2, 2);  */
 }
 ul{
     width: 100%;
@@ -31,4 +32,8 @@ ul{
     margin: 0px;
     align-items: center;
     list-style: none;
+    
+}
+ul li {
+    font-size: 20px;
 }
